--- a/Exercises/HW03.md
+++ b/Exercises/HW03.md
@@ -7,16 +7,16 @@
 * First line contains the number of vaccines - N. Second line contains N integers, which are strength of vaccines. Third line contains N integers, which are midichlorians count of patients.
 
 ### Output Format
-* Print a single line containing  or .
+* Print a single line containing 'Yes' or 'No'.
 
 ### Input Constraint
 * 1 < N < 10
 * Strength of vaccines and midichlorians count of patients fit in integer.
 
 ### Sample Input
-5
-123 146 454 542 456
-100 328 248 689 200
+* 5
+* 123 146 454 542 456
+* 100 328 248 689 200
 
 ### Sample Output
-No
+* No
